--- a/member/src/main/resources/application.yml
+++ b/member/src/main/resources/application.yml
@@ -1,25 +1,36 @@
+logging:
+  level:
+    root: info
+    org.hiberante.SQL: debug
+    org.hiberante.type: trace
+
 spring:
-  profiles:
-    include: jwt
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/vestie?serverTimezone=Asia/Seoul
-    username: root
-    password: r1234!
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
   jpa:
-    hibernate:
-      ddl-auto: update
+    open-in-view: false
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
         format_sql: true
+        use_sql_comments: true
         default_batch_fetch_size: 100
-        dialect: org.hibernate.dialect.MySQL57Dialect
 
-loggin.level:
-  org.hibernate.SQL: debug
+    hibernate:
+      ddl-auto: create
 
-
+  profiles:
+    active: local, jwt
 
 #eureka:
 #  client:
